2004-07-24  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/ipc/fifos/fifos.c (mbx_sem_wait): Remove spurious
	rtf_restore_flags(); this bug used to wreck the preemption count
	with a preemptible kernel, and forcibly release a non-held
	spinlock in any case, which is always a bad idea...

	* configure.in: Allow CONFIG_FRAME_POINTER in kernel.

2004-07-23  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/hal/hal.c (rtai_trap_fault): Fix the
	conditional section mess.

2004-07-20  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c4.

2004-07-19  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c: Do not escalate the
	rescheduling requests for LXRT; this breaks.

	* rtai-core/arch/i386/patches: Upgrade the x86 patch to
	2.6.7r6c3.

	* rtai-core/sched/rtai/sched_lxrt.c (rt_schedule_soft,
	give_back_to_linux, lxrt_migration_handler, kthread_m): Rework
	interrupt masking and critical sections.

2004-07-17  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_mup.c: Fix compilation.

	* rtai-core/sched/rtai/sched_*.c: Always escalate the rescheduling
	requests to the RTAI domain as needed; this closes a long-standing
	race window where Linux interrupts might be served on a non-Linux
	stack.

	* rtai-core/sched/rtai/sched_lxrt.c (put_current_on_cpu): Use the
	direct kernel interface (set_cpus_allowed()) for setting the
	scheduling affinity of the current task. Do _not_ mess anymore with the
	'cpus_allowed' member of the Linux task struct with v2.6.

2004-07-14  Philippe Gerum  <rpm@xenomai.org>

	* rtai-core/sched/rtai/sched_lxrt.c (intr_get_current): Iron the
	Adeos-aware code retrieving the current linux task.

	* rtai-core/sched/rtai/sched_lxrt.c (rt_timer_handler,
	rt_schedule, rt_schedule_on_schedule_ipi): Mask interrupts at
	hardware-level during core scheduling operations.
	
2004-07-12  Roberto Bucher <roberto.bucher@supsi.ch>
