@@ -689,7 +689,7 @@ int __rtai_heap_init (void)
 
 #ifdef CONFIG_RTAI_MALLOC_VMALLOC
 	if (!(rtai_global_heap_adr = alloc_extent(rtai_global_heap_size))) {
-		printk("RTAI[malloc]: failed to preallocate the vmalloced extent for the global heap (size=%d bytes).\n",
+		printk(KERN_INFO "RTAI[malloc]: initial alloc_extent() failed (size=%d bytes).\n",
 		       rtai_global_heap_size);
 		return 1;
 	}
@@ -699,7 +699,7 @@ int __rtai_heap_init (void)
 
     if (rtheap_init(&rtai_global_heap,rtai_global_heap_adr,rtai_global_heap_size,PAGE_SIZE))
 	{
-	printk("RTAI[malloc]: failed to initialize the global heap (size=%d bytes).\n",
+	printk(KERN_INFO "RTAI[malloc]: failed to initialize the global heap (size=%d bytes).\n",
 	       rtai_global_heap_size);
 
 	return 1;
@@ -707,7 +707,8 @@ int __rtai_heap_init (void)
 
     rtai_global_heap.flags &= ~RTHEAP_EXTENDABLE;
 
-    printk("RTAI[malloc] loaded (global heap size=%d bytes).\n",rtai_global_heap_size);
+    printk(KERN_INFO "RTAI[malloc]: loaded (global heap size=%d bytes).\n",
+	   rtai_global_heap_size);
 
     return 0;
 }
@@ -715,7 +716,7 @@ int __rtai_heap_init (void)
 void __rtai_heap_exit (void) {
 
     rtheap_destroy(&rtai_global_heap);
-    printk("RTAI[malloc] unloaded.\n");
+    printk("RTAI[malloc]: unloaded.\n");
 }
 
 /*
