@@ -1454,12 +1454,6 @@ int __rtai_mup_init(void)
 #ifdef CONFIG_PROC_FS
 	rtai_proc_sched_register();
 #endif
-	printk("\n***** STARTING THE MUP REAL TIME SCHEDULER WITH %sLINUX FP SUPPORT *****", LinuxFpu ? "": "NO ");
-	printk("\n***<> LINUX TICK AT %d (HZ) <>***", HZ);
-	printk("\n***<> CALIBRATED CPU FREQUENCY %lu (HZ) <>***", tuned.cpu_freq);
-	printk("\n***<> CALIBRATED APIC_INTERRUPT-TO-SCHEDULER LATENCY %d (ns) <>***", imuldiv(tuned.latency - tuned.setup_time_TIMER_CPUNIT, 1000000000, tuned.cpu_freq));
-	printk("\n***<> CALIBRATED ONE SHOT APIC SETUP TIME %d (ns) <>***", imuldiv(tuned.setup_time_TIMER_CPUNIT, 1000000000, tuned.cpu_freq));
-	printk("\n***<> COMPILER: %s***\n\n", CONFIG_RTAI_COMPILER);
 	rt_mount_rtai();
 // 0x7dd763ad == nam2num("MEMSRQ").
 	if ((frstk_srq.srq = rt_request_srq(0x7dd763ad, frstk_srq_handler, 0)) < 0) {
@@ -1481,6 +1475,23 @@ int __rtai_mup_init(void)
 				  NULL,
 				  IPIPE_HANDLE_MASK);
 #endif /* CONFIG_RTAI_ADEOS */
+
+	printk(KERN_INFO "RTAI[sched_mup]: loaded.\n");
+	printk(KERN_INFO "RTAI[sched_mup]: fpu=%s, timer=%s (%s).\n",
+	       LinuxFpu ? "yes" : "no",
+	       oneshot_timer ? "oneshot" : "periodic",
+#ifdef __USE_APIC__
+	       "APIC"
+#else /* __USE_APIC__ */
+	       "8254-PIT"
+#endif /* __USE_APIC__ */
+	       );
+	printk(KERN_INFO "RTAI[sched_mup]: standard tick=%d hz, CPU freq=%lu hz.\n",
+	       HZ,
+	       (unsigned long)tuned.cpu_freq);
+	printk(KERN_INFO "RTAI[sched_mup]: timer setup=%d ns, resched latency=%d ns.\n",
+	       imuldiv(tuned.setup_time_TIMER_CPUNIT, 1000000000, tuned.cpu_freq),
+	       imuldiv(tuned.latency - tuned.setup_time_TIMER_CPUNIT, 1000000000, tuned.cpu_freq));
 
 	return rtai_init_features(); /* see rtai_schedcore.h */
 }
@@ -1521,7 +1532,7 @@ void __rtai_mup_exit(void)
 	rt_set_ihook(NULL);
 #endif /* CONFIG_RTAI_SCHED_ISR_LOCK */
 	rt_umount_rtai();
-	printk("\n***** THE MUP REAL TIME SCHEDULER HAS BEEN REMOVED *****\n\n");
+	printk(KERN_INFO "RTAI[sched_mup]: unloaded.\n");
 }
 
 module_init(__rtai_mup_init);
